@@ -22,12 +22,15 @@
 // SOFTWARE.
 ////////////////////////////////////////////////////////////////////////////////
 
+using System;
 using System.Collections.Generic;
 using System.Drawing;
 using CardMaker.Card.FormattedText;
 using CardMaker.Card.FormattedText.Alignment;
 using CardMaker.Card.FormattedText.Markup;
 using CardMaker.XML;
+using Support.IO;
+using Support.UI;
 
 namespace CardMaker.Card
 {
@@ -35,9 +38,7 @@ namespace CardMaker.Card
     {
         public void Draw(Graphics zGraphics, Deck zDeck, ProjectLayoutElement zElement, string sInput)
         {
-            var zFont = zElement.GetElementFont();
-            var colorFont = zElement.GetElementColor();
-
+#if true
             // check the cache for this item
             var zDataFormattedCache = zDeck.GetCachedMarkup(zElement.name);
 
@@ -47,19 +48,134 @@ namespace CardMaker.Card
                 zDataFormattedCache.Render(zElement, zGraphics);
                 return;
             }
+#endif
 
-            if (null == zFont) // default to something!
+            zDataFormattedCache = new FormattedTextDataCache();
+            var zFormattedTextData = new FormattedTextData(FormattedTextParser.GetMarkups(sInput));
+
+            List<MarkupBase> listRenderedMarkups = null;
+
+            if (zElement.autoscalefont)
             {
-                // font will show up in red if it's not yet set
-                zFont = FontLoader.DefaultFont;
+                listRenderedMarkups = processAutoScale(zGraphics, zElement, zFormattedTextData);
+            }
+            else
+            {
+                listRenderedMarkups = processMarkupDefinition(zGraphics, zElement, zElement.GetElementFont().Size, zFormattedTextData);
             }
 
+            // update the cache
+            listRenderedMarkups.ForEach((zMarkup) => zDataFormattedCache.AddMarkup(zMarkup));
+            zDeck.AddCachedMarkup(zElement.name, zDataFormattedCache);
+
+            // render!
+            zDataFormattedCache.Render(zElement, zGraphics);
+        }
+
+        protected List<MarkupBase> processAutoScale(Graphics zGraphics, ProjectLayoutElement zElement, FormattedTextData zFormattedTextData)
+        {
+            var listRenderedMarkups = processMarkupDefinition(zGraphics, zElement, zElement.GetElementFont().Size, zFormattedTextData);
+
+            // the preprocessing above will get the font size close but not perfect, the slow code below further refines the size
+            // slow mode - but perfect precision (well arguably with the Graphics.MeasureString)
+
+            float fYOverflow;
+            float fXOverflow;
+
+            getOverflow(zElement, listRenderedMarkups, out fXOverflow, out fYOverflow);
+
+            if (fYOverflow == 0) return listRenderedMarkups;
+
+            var zWatch = new System.Diagnostics.Stopwatch();
+            zWatch.Start();
+
+            /// Scale attempt (likely to be wrong, but a starting point)
+            var fScale = (float)zElement.height / (float)(zElement.height + fYOverflow);
+            var nFontSize = (int)Math.Floor((decimal)Math.Max(fScale * zElement.GetElementFont().Size, 1));
+
+            if (nFontSize == 1)
+            {
+                Logger.AddLogLine("Unable to scale font properly. Result would be a font size smaller than 1. Giving up.");
+                return listRenderedMarkups;
+            }
+#if true
+            // Slow processing loop to seek the best font size
+            //////
+            var bUpscaled = false;
+            while (true)
+            {
+                listRenderedMarkups = processMarkupDefinition(zGraphics, zElement, nFontSize, zFormattedTextData);
+                getOverflow(zElement, listRenderedMarkups, out fXOverflow, out fYOverflow);
+                // too large, scale down
+                if (fYOverflow == 0)
+                {
+                    //Logger.AddLogLine($"{zElement.name} Auto-Scale FormattedText: {nFontSize}");
+                    break;
+                }
+                if (fYOverflow > 0)
+                {
+                    if (nFontSize == 1)
+                    {
+                        //Logger.AddLogLine("Unable to scale font properly. Result would be a font size smaller than 1. Giving up.");
+                        return listRenderedMarkups;
+                    }
+                    if (bUpscaled)
+                    {
+                        //Logger.AddLogLine($"{zElement.name} Auto-Scale(U) FormattedText: {nFontSize}");
+                        break;
+                    }
+                    nFontSize--;
+                }
+                // possibly too small, scale up
+                else
+                {
+                    nFontSize++;
+                    bUpscaled = true;
+                }
+            }
+#endif
+            zWatch.Stop();
+            //Logger.AddLogLine($"MS spent ${zWatch.ElapsedMilliseconds}");
+            return listRenderedMarkups;
+        }
+
+        /// <summary>
+        /// Gets the overflow (Y value for now) amount based the list of rendered markups
+        /// </summary>
+        /// <param name="zElement">The element to evaluate</param>
+        /// <param name="listRenderedMarkups">The markups to look for overflow with</param>
+        /// <param name="fXOverflow">The out horizontal overflow (not yet applicable)</param>
+        /// <param name="fYOverflow">The out vertical overflow (not yet applicable)</param>
+        protected void getOverflow(ProjectLayoutElement zElement, List<MarkupBase> listRenderedMarkups, out float fXOverflow, out float fYOverflow)
+        {
+            fYOverflow = 0;
+            fXOverflow = 0;
+            foreach (var zMarkup in listRenderedMarkups)
+            {
+                if (zMarkup.TargetRect.Y + zMarkup.TargetRect.Height > zElement.height)
+                {
+                    fYOverflow = Math.Max(fYOverflow,
+                        (zMarkup.TargetRect.Y + zMarkup.TargetRect.Height) - zElement.height);
+                }
+                // TODO: consider the need for X overflow
+            }
+        }
+
+        /// <summary>
+        /// Processes the formatted text data into rendered markups.
+        /// </summary>
+        /// <param name="zGraphics">The graphics to use to plan the render</param>
+        /// <param name="zElement">The element</param>
+        /// <param name="fMainFontSize">The font size to use for the default font</param>
+        /// <param name="zFormattedTextData">The processed formatted text data</param>
+        /// <returns>List of markups to be rendered</returns>
+        protected List<MarkupBase> processMarkupDefinition(Graphics zGraphics, ProjectLayoutElement zElement, float fMainFontSize, FormattedTextData zFormattedTextData)
+        {
+            var colorFont = zElement.GetElementColor();
             var zBrush = 255 == zElement.opacity
                 ? new SolidBrush(colorFont)
                 : new SolidBrush(Color.FromArgb(zElement.opacity, colorFont));
 
-            zDataFormattedCache = new FormattedTextDataCache();
-            var zFormattedData = new FormattedTextData(FormattedTextParser.GetMarkups(sInput));
             var zProcessData = new FormattedTextProcessData
             {
                 FontBrush = zBrush,
@@ -67,10 +183,20 @@ namespace CardMaker.Card
                 CurrentStringAlignment = zElement.GetHorizontalAlignment()
             };
 
-            // set the initial font
-            zProcessData.SetFont(zFont, zGraphics);
+            var zFont = zElement.GetElementFont();
+            if (null == zFont) // default to something!
+            {
+                // font will show up in red if it's not yet set
+                zFont = FontLoader.DefaultFont;
+            }
 
-            var listPassMarkups = new List<MarkupBase>(); // only contains the markups that will be actively drawn (for caching)
+            var zScaledFont = FontLoader.GetFont(zFont.FontFamily, fMainFontSize, zFont.Style);
+
+            // set the initial font
+            zProcessData.SetFont(zScaledFont, zGraphics);
+
+            var listPassMarkups =
+                new List<MarkupBase>(); // only contains the markups that will be actively drawn (for caching)
 
             // Pass 1:
             // - Create rectangles
@@ -80,10 +206,10 @@ namespace CardMaker.Card
             // - Generate markup rows (LineNumber is usable AFTER this process)
             int nIdx;
             MarkupBase zMarkup;
-            for (nIdx = 0; nIdx < zFormattedData.AllMarkups.Count; nIdx++)
+            for (nIdx = 0; nIdx < zFormattedTextData.AllMarkups.Count; nIdx++)
             {
-                zMarkup = zFormattedData.AllMarkups[nIdx];
-                if (zMarkup.ProcessMarkup(zElement, zFormattedData, zProcessData, zGraphics))
+                zMarkup = zFormattedTextData.AllMarkups[nIdx];
+                if (zMarkup.ProcessMarkup(zElement, zFormattedTextData, zProcessData, zGraphics))
                 {
                     zMarkup.LineNumber = zProcessData.CurrentLine;
                     listPassMarkups.Add(zMarkup);
@@ -115,6 +241,7 @@ namespace CardMaker.Card
                     {
                         bFindNextLine = true;
                     }
+
                     nIdx--;
                 }
             }
@@ -133,20 +260,12 @@ namespace CardMaker.Card
                 if (!zMarkup.PostProcessMarkupRectangle(zElement, listPassMarkups, nIdx))
                 {
                     listPassMarkups.RemoveAt(nIdx);
-                    nIdx--;
-                }
-                else
-                {
-                    zDataFormattedCache.AddMarkup(zMarkup);
+                    continue;
                 }
                 nIdx++;
             }
 
-            // update the cache
-            zDeck.AddCachedMarkup(zElement.name, zDataFormattedCache);
-
-            // render!
-            zDataFormattedCache.Render(zElement, zGraphics);
+            return listPassMarkups;
         }
     }
 }
